--- a/index.html
+++ b/index.html
@@ -3,32 +3,32 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Your Site — Clean & Modern</title>
-  <meta name="description" content="A clean, modern one-page site ready for GitHub Pages.">
+  <title>Iceland Trip — Travel Portfolio</title>
+  <meta name="description" content="Iceland Trip — travel highlights, itinerary, and contact.">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="header">
     <div class="wrap">
-      <a class="logo" href="#">Your<span class="accent">Site</span></a>
-      <nav class="nav">
+      <a class="logo" href="#">Iceland<span class="accent">Trip</span></a>
+      <nav class="nav" aria-label="Main navigation">
         <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#work">Work</a>
+        <a href="#services">Itinerary</a>
+        <a href="#work">Gallery</a>
         <a href="#contact" class="cta">Contact</a>
       </nav>
     </div>
   </header>
 
   <main>
-    <section class="hero">
+    <section class="hero" aria-labelledby="hero-heading">
       <div class="wrap hero-inner">
         <div class="hero-copy">
-          <h1>Design that works. Pages that convert.</h1>
-          <p class="lead">Fast, responsive, and easy to customize — a one-page website built for clarity and results. Perfect for portfolios, small businesses, and landing pages.</p>
+          <h1 id="hero-heading">Discover Iceland — curated trips & highlights.</h1>
+          <p class="lead">Guides, itineraries, and photo highlights from Iceland. Fast, responsive, and easy to customize for your travel blog.</p>
           <p class="actions">
             <a href="#contact" class="btn">Get in touch</a>
-            <a href="#work" class="btn ghost">See examples</a>
+            <a href="#work" class="btn ghost">View gallery</a>
           </p>
         </div>
         <div class="hero-art" aria-hidden="true">
@@ -43,79 +43,11 @@
       </div>
     </section>
 
-    <section id="about" class="section light">
+    <section id="about" class="section light" aria-labelledby="about-heading">
       <div class="wrap">
-        <h2>About</h2>
-        <p class="muted">This template is focused on performance and clarity. The layout is responsive and uses semantic HTML so search engines and screen readers work well.</p>
+        <h2 id="about-heading">About this trip</h2>
+        <p class="muted">IcelandTrip collects travel notes, recommended itineraries, and beautiful photos from Iceland. Customize the content to share your own experiences.</p>
       </div>
     </section>
 
-    <section id="services" class="section">
-      <div class="wrap grid-3">
-        <div class="card">
-          <h3>Branding</h3>
-          <p>Clean identity and messaging that tells your story quickly.</p>
-        </div>
-        <div class="card">
-          <h3>Web Design</h3>
-          <p>Responsive pages that load fast and look great on any device.</p>
-        </div>
-        <div class="card">
-          <h3>Consulting</h3>
-          <p>Strategy-first approach — we'll help you choose the right next steps.</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="work" class="section light">
-      <div class="wrap">
-        <h2>Selected Work</h2>
-        <div class="grid-2 showcase">
-          <div class="showcase-card">
-            <div class="thumb" aria-hidden="true"></div>
-            <h4>Project One</h4>
-            <p class="muted">A landing page redesign that increased signups by 27%.</p>
-          </div>
-          <div class="showcase-card">
-            <div class="thumb" aria-hidden="true"></div>
-            <h4>Project Two</h4>
-            <p class="muted">A small business site with a focus on conversions and speed.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact" class="section contact">
-      <div class="wrap">
-        <h2>Contact</h2>
-        <p class="muted">Ready to start? Drop your message and I'll get back to you.</p>
-        <form class="form" onsubmit="alert('Demo form — configure a backend to receive messages.'); return false;">
-          <label>
-            Name
-            <input type="text" name="name" placeholder="Your name" required>
-          </label>
-          <label>
-            Email
-            <input type="email" name="email" placeholder="you@example.com" required>
-          </label>
-          <label>
-            Message
-            <textarea name="message" rows="5" placeholder="Tell me about your project" required></textarea>
-          </label>
-          <p><button class="btn" type="submit">Send message</button></p>
-        </form>
-      </div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="wrap">
-      <p>© <span id="year"></span> Your Site • Built with a simple starter template.</p>
-    </div>
-  </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-</body>
-</html>
+    <section id="services" class
