--- a/index.html
+++ b/index.html
@@ -3,51 +3,73 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Iceland Trip — Travel Portfolio</title>
-  <meta name="description" content="Iceland Trip — travel highlights, itinerary, and contact.">
+  <title>Iceland & Norway Family Trip 2025 — Northern Lights Adventure</title>
+  <meta name="description" content="Family Iceland & Norway Trip — chasing waterfalls, glaciers, fjords, and the Northern Lights.">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header class="header">
     <div class="wrap">
-      <a class="logo" href="#">Iceland<span class="accent">Trip</span></a>
-      <nav class="nav" aria-label="Main navigation">
+      <a class="logo" href="#">Aurora<span class="accent">Adventure</span></a>
+      <nav class="nav">
         <a href="#about">About</a>
-        <a href="#services">Itinerary</a>
-        <a href="#work">Gallery</a>
+        <a href="#itinerary">Itinerary</a>
+        <a href="#gallery">Gallery</a>
         <a href="#contact" class="cta">Contact</a>
       </nav>
     </div>
   </header>
 
   <main>
-    <section class="hero" aria-labelledby="hero-heading">
+    <!-- HERO -->
+    <section class="hero">
       <div class="wrap hero-inner">
         <div class="hero-copy">
-          <h1 id="hero-heading">Discover Iceland — curated trips & highlights.</h1>
-          <p class="lead">Guides, itineraries, and photo highlights from Iceland. Fast, responsive, and easy to customize for your travel blog.</p>
+          <h1>🌌 Family Iceland & Norway Trip 2025</h1>
+          <p class="lead">Dear Family, pack your bags! From waterfalls to fjords, we’re off to <strong>chase the Northern Lights</strong> and explore the Arctic together.</p>
           <p class="actions">
-            <a href="#contact" class="btn">Get in touch</a>
-            <a href="#work" class="btn ghost">View gallery</a>
+            <a href="#itinerary" class="btn">View Itinerary</a>
+            <a href="#gallery" class="btn ghost">See Highlights</a>
           </p>
         </div>
         <div class="hero-art" aria-hidden="true">
-          <svg viewBox="0 0 400 300" width="400" height="300" xmlns="http://www.w3.org/2000/svg" role="img">
-            <rect x="10" y="10" width="380" height="280" rx="18" fill="#f7fbff"/>
-            <circle cx="120" cy="120" r="52" fill="#e6f0ff"/>
-            <rect x="180" y="60" width="160" height="24" rx="6" fill="#f3f9f0"/>
-            <rect x="180" y="110" width="120" height="16" rx="4" fill="#f6eefb"/>
-            <rect x="40" y="200" width="320" height="28" rx="8" fill="#fff7ed"/>
+          <svg viewBox="0 0 400 300" width="400" height="300" xmlns="http://www.w3.org/2000/svg">
+            <rect x="10" y="10" width="380" height="280" rx="18" fill="#f0f8ff"/>
+            <circle cx="200" cy="150" r="80" fill="#dbeafe"/>
+            <rect x="40" y="220" width="320" height="28" rx="8" fill="#e0f2fe"/>
           </svg>
         </div>
       </div>
     </section>
 
-    <section id="about" class="section light" aria-labelledby="about-heading">
+    <!-- ABOUT -->
+    <section id="about" class="section light">
       <div class="wrap">
-        <h2 id="about-heading">About this trip</h2>
-        <p class="muted">IcelandTrip collects travel notes, recommended itineraries, and beautiful photos from Iceland. Customize the content to share your own experiences.</p>
+        <h2>About this trip</h2>
+        <p class="muted">This trip is all about <strong>family, fun, and the magical Aurora Borealis</strong>. From Iceland’s glaciers to Norway’s Arctic skies, we’ll explore, laugh, and make memories together.</p>
       </div>
     </section>
 
-    <section id="services" class
+    <!-- ITINERARY -->
+    <section id="itinerary" class="section">
+      <div class="wrap">
+        <h2>Our Day-by-Day Plan</h2>
+        <ul>
+          <li><strong>27 Oct:</strong> ✈️ Flight DEL → Reykjavik (via Munich & Zurich). Arrive and check in at Airbnb, Reykjavík (3 nights).</li>
+          <li><strong>30 Oct:</strong> 🏨 Move to Seljalandsfoss Horizons (2 nights).</li>
+          <li><strong>1 Nov:</strong> 🏨 Stay at Hotel Berg, Keflavik (1 night).</li>
+          <li><strong>2 Nov:</strong> ✈️ Reykjavik → Oslo → Leknes. 🏨 Stay in Ramberg, Lofoten (3 nights). 🌌 First chance for Northern Lights!</li>
+          <li><strong>5 Nov:</strong> ✈️ Flight Leknes → Tromsø. 🏨 Airbnb Tromsø (3 nights). 🌌 Best spot for Aurora adventures.</li>
+          <li><strong>8 Nov:</strong> ✈️ Return journey from Tromsø.</li>
+        </ul>
+        <p class="muted">✨ Highlight nights for the <strong>Northern Lights</strong>: Lofoten & Tromsø 🌌</p>
+      </div>
+    </section>
+
+    <!-- GALLERY -->
+    <section id="gallery" class="section light">
+      <div class="wrap">
+        <h2>Trip Highlights</h2>
+        <div class="grid-2 showcase">
+          <div class="showcase-card">
+            <
