--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Iceland & Norway Family Trip 2025 — Northern Lights Adventure</title>
-  <meta name="description" content="Family Iceland & Norway Trip — chasing waterfalls, glaciers, fjords, and the Northern Lights.">
+  <title>Sneha & Babita — Arctic Adventure 2025</title>
+  <meta name="description" content="Family Iceland & Norway Trip — waterfalls, fjords, and the Northern Lights.">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,56 +20,104 @@
     </div>
   </header>
 
-  <main>
-    <!-- HERO -->
-    <section class="hero">
-      <div class="wrap hero-inner">
-        <div class="hero-copy">
-          <h1>🌌 Family Iceland & Norway Trip 2025</h1>
-          <p class="lead">Dear Family, pack your bags! From waterfalls to fjords, we’re off to <strong>chase the Northern Lights</strong> and explore the Arctic together.</p>
-          <p class="actions">
-            <a href="#itinerary" class="btn">View Itinerary</a>
-            <a href="#gallery" class="btn ghost">See Highlights</a>
-          </p>
+  <!-- HERO -->
+  <section class="hero" style="background:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?w=1600') center/cover no-repeat; color:white; text-shadow:0 2px 6px rgba(0,0,0,0.7);">
+    <div class="wrap hero-inner" style="background:rgba(0,0,0,0.45); border-radius:14px; padding:40px;">
+      <div class="hero-copy">
+        <h1>🌌 Sneha & Babita — Get Ready for an Arctic Adventure!</h1>
+        <p class="lead">Together, we’ll explore Iceland & Norway — waterfalls, fjords, and the magical <strong>Northern Lights</strong>.</p>
+        <p class="actions">
+          <a href="#itinerary" class="btn">View Itinerary</a>
+          <a href="#gallery" class="btn ghost">See Highlights</a>
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- ABOUT -->
+  <section id="about" class="section light">
+    <div class="wrap">
+      <h2>About this trip</h2>
+      <p class="muted">Sneha & Babita, this journey is our gift of time together. From Iceland’s glaciers to Norway’s Arctic skies, we’ll explore, laugh, and create unforgettable memories under the Aurora Borealis 🌌.</p>
+    </div>
+  </section>
+
+  <!-- ITINERARY -->
+  <section id="itinerary" class="section">
+    <div class="wrap">
+      <h2>Our Day-by-Day Plan</h2>
+      <ul class="timeline">
+        <li><span>27 Oct</span> ✈️ Flight: Delhi → Reykjavik (via Munich & Zurich). Arrive in Iceland.</li>
+        <li><span>27–30 Oct</span> 🏨 Stay: Airbnb – Hrefnugata 8, Reykjavík (3 nights).</li>
+        <li><span>30 Oct – 1 Nov</span> 🏨 Stay: Seljalandsfoss Horizons (2 nights).</li>
+        <li><span>1 Nov – 2 Nov</span> 🏨 Stay: Hotel Berg ★★★★★, Keflavik (1 night).</li>
+        <li><span>2 Nov</span> ✈️ Flights: Reykjavik → Oslo → Leknes (via Bodø).</li>
+        <li><span>2–5 Nov</span> 🏡 Stay: Home in Ramberg, Lofoten (3 nights). 🌌 Northern Lights chance!</li>
+        <li><span>5 Nov</span> ✈️ Flight: Leknes → Tromsø (Widerøe Airlines).</li>
+        <li><span>5–8 Nov</span> 🏡 Stay: Airbnb in Tromsø (3 nights). 🌌 Best Aurora views!</li>
+        <li><span>8 Nov</span> ✈️ Return from Tromsø.</li>
+      </ul>
+      <p class="muted">✨ Highlight Nights for <strong>Northern Lights</strong>: Lofoten & Tromsø 🌌</p>
+    </div>
+  </section>
+
+  <!-- GALLERY -->
+  <section id="gallery" class="section light">
+    <div class="wrap">
+      <h2>Trip Highlights</h2>
+      <div class="grid-2 showcase">
+        <div class="showcase-card">
+          <div class="thumb" style="background:url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800') center/cover no-repeat;"></div>
+          <h4>🏊 Blue Lagoon</h4>
+          <p class="muted">Relax in Iceland’s famous geothermal spa.</p>
         </div>
-        <div class="hero-art" aria-hidden="true">
-          <svg viewBox="0 0 400 300" width="400" height="300" xmlns="http://www.w3.org/2000/svg">
-            <rect x="10" y="10" width="380" height="280" rx="18" fill="#f0f8ff"/>
-            <circle cx="200" cy="150" r="80" fill="#dbeafe"/>
-            <rect x="40" y="220" width="320" height="28" rx="8" fill="#e0f2fe"/>
-          </svg>
+        <div class="showcase-card">
+          <div class="thumb" style="background:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?w=800') center/cover no-repeat;"></div>
+          <h4>🌌 Northern Lights</h4>
+          <p class="muted">Aurora Borealis over Arctic skies.</p>
+        </div>
+        <div class="showcase-card">
+          <div class="thumb" style="background:url('https://images.unsplash.com/photo-1523978591478-c753949ff840?w=800') center/cover no-repeat;"></div>
+          <h4>🏔 Waterfalls & Glaciers</h4>
+          <p class="muted">Seljalandsfoss, Skógafoss & Jökulsárlón.</p>
+        </div>
+        <div class="showcase-card">
+          <div class="thumb" style="background:url('https://images.unsplash.com/photo-1521295121783-8a321d551ad2?w=800') center/cover no-repeat;"></div>
+          <h4>🏡 Lofoten Islands</h4>
+          <p class="muted">Fjords, fishing villages & cozy cabins.</p>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- ABOUT -->
-    <section id="about" class="section light">
-      <div class="wrap">
-        <h2>About this trip</h2>
-        <p class="muted">This trip is all about <strong>family, fun, and the magical Aurora Borealis</strong>. From Iceland’s glaciers to Norway’s Arctic skies, we’ll explore, laugh, and make memories together.</p>
-      </div>
-    </section>
+  <!-- CONTACT -->
+  <section id="contact" class="section contact">
+    <div class="wrap">
+      <h2>Join the Adventure</h2>
+      <p class="muted">Sneha & Babita, excited about the trip? Let us know 💙</p>
+      <form class="form" onsubmit="alert('This is just a demo form — reply directly to confirm!'); return false;">
+        <label>
+          Name
+          <input type="text" name="name" placeholder="Your name" required>
+        </label>
+        <label>
+          Message
+          <textarea name="message" rows="5" placeholder="I’m in! Can’t wait for our Arctic adventure 🌌" required></textarea>
+        </label>
+        <p><button class="btn" type="submit">Send</button></p>
+      </form>
+    </div>
+  </section>
 
-    <!-- ITINERARY -->
-    <section id="itinerary" class="section">
-      <div class="wrap">
-        <h2>Our Day-by-Day Plan</h2>
-        <ul>
-          <li><strong>27 Oct:</strong> ✈️ Flight DEL → Reykjavik (via Munich & Zurich). Arrive and check in at Airbnb, Reykjavík (3 nights).</li>
-          <li><strong>30 Oct:</strong> 🏨 Move to Seljalandsfoss Horizons (2 nights).</li>
-          <li><strong>1 Nov:</strong> 🏨 Stay at Hotel Berg, Keflavik (1 night).</li>
-          <li><strong>2 Nov:</strong> ✈️ Reykjavik → Oslo → Leknes. 🏨 Stay in Ramberg, Lofoten (3 nights). 🌌 First chance for Northern Lights!</li>
-          <li><strong>5 Nov:</strong> ✈️ Flight Leknes → Tromsø. 🏨 Airbnb Tromsø (3 nights). 🌌 Best spot for Aurora adventures.</li>
-          <li><strong>8 Nov:</strong> ✈️ Return journey from Tromsø.</li>
-        </ul>
-        <p class="muted">✨ Highlight nights for the <strong>Northern Lights</strong>: Lofoten & Tromsø 🌌</p>
-      </div>
-    </section>
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="wrap">
+      <p>© <span id="year"></span> Sneha & Babita — Arctic Adventure 2025</p>
+    </div>
+  </footer>
 
-    <!-- GALLERY -->
-    <section id="gallery" class="section light">
-      <div class="wrap">
-        <h2>Trip Highlights</h2>
-        <div class="grid-2 showcase">
-          <div class="showcase-card">
-            <
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
