--- a/index.html
+++ b/index.html
@@ -1,123 +1,74 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Sneha & Babita — Arctic Adventure 2025</title>
-  <meta name="description" content="Family Iceland & Norway Trip — waterfalls, fjords, and the Northern Lights.">
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header class="header">
-    <div class="wrap">
-      <a class="logo" href="#">Aurora<span class="accent">Adventure</span></a>
-      <nav class="nav">
-        <a href="#about">About</a>
-        <a href="#itinerary">Itinerary</a>
-        <a href="#gallery">Gallery</a>
-        <a href="#contact" class="cta">Contact</a>
-      </nav>
-    </div>
-  </header>
+<!-- ITINERARY -->
+<section id="itinerary" class="section itinerary-section" aria-labelledby="itinerary-heading">
+  <div class="wrap">
+    <h2 id="itinerary-heading">🌍 Our Arctic Adventure — Day by Day</h2>
 
-  <!-- HERO -->
-  <section class="hero" style="background:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?w=1600') center/cover no-repeat; color:white; text-shadow:0 2px 6px rgba(0,0,0,0.7);">
-    <div class="wrap hero-inner" style="background:rgba(0,0,0,0.45); border-radius:14px; padding:40px;">
-      <div class="hero-copy">
-        <h1>🌌 Sneha & Babita — Get Ready for an Arctic Adventure!</h1>
-        <p class="lead">Together, we’ll explore Iceland & Norway — waterfalls, fjords, and the magical <strong>Northern Lights</strong>.</p>
-        <p class="actions">
-          <a href="#itinerary" class="btn">View Itinerary</a>
-          <a href="#gallery" class="btn ghost">See Highlights</a>
-        </p>
-      </div>
+    <div class="itinerary-card flight">
+      <div class="date">27 Oct</div>
+      <h3>✈️ Flight to Iceland</h3>
+      <p><strong>Delhi (DEL) → Reykjavik (KEF)</strong>, via Munich & Zurich</p>
+      <p><strong>Airline:</strong> Lufthansa (codeshares)</p>
+      <p><strong>Departure:</strong> 01:55 (27 Oct)</p>
+      <p class="note">🌍 Arrival in Reykjavik — the adventure begins!</p>
     </div>
-  </section>
 
-  <!-- ABOUT -->
-  <section id="about" class="section light">
-    <div class="wrap">
-      <h2>About this trip</h2>
-      <p class="muted">Sneha & Babita, this journey is our gift of time together. From Iceland’s glaciers to Norway’s Arctic skies, we’ll explore, laugh, and create unforgettable memories under the Aurora Borealis 🌌.</p>
+    <div class="itinerary-card stay">
+      <div class="date">27–30 Oct</div>
+      <h3>🏨 Reykjavík Stay (3 nights)</h3>
+      <p><strong>Airbnb:</strong> Hrefnugata 8, Reykjavík 105</p>
+      <p class="note">📍 Near Reykjavik Art Museum Kjarvalsstaðir</p>
     </div>
-  </section>
 
-  <!-- ITINERARY -->
-  <section id="itinerary" class="section">
-    <div class="wrap">
-      <h2>Our Day-by-Day Plan</h2>
-      <ul class="timeline">
-        <li><span>27 Oct</span> ✈️ Flight: Delhi → Reykjavik (via Munich & Zurich). Arrive in Iceland.</li>
-        <li><span>27–30 Oct</span> 🏨 Stay: Airbnb – Hrefnugata 8, Reykjavík (3 nights).</li>
-        <li><span>30 Oct – 1 Nov</span> 🏨 Stay: Seljalandsfoss Horizons (2 nights).</li>
-        <li><span>1 Nov – 2 Nov</span> 🏨 Stay: Hotel Berg ★★★★★, Keflavik (1 night).</li>
-        <li><span>2 Nov</span> ✈️ Flights: Reykjavik → Oslo → Leknes (via Bodø).</li>
-        <li><span>2–5 Nov</span> 🏡 Stay: Home in Ramberg, Lofoten (3 nights). 🌌 Northern Lights chance!</li>
-        <li><span>5 Nov</span> ✈️ Flight: Leknes → Tromsø (Widerøe Airlines).</li>
-        <li><span>5–8 Nov</span> 🏡 Stay: Airbnb in Tromsø (3 nights). 🌌 Best Aurora views!</li>
-        <li><span>8 Nov</span> ✈️ Return from Tromsø.</li>
-      </ul>
-      <p class="muted">✨ Highlight Nights for <strong>Northern Lights</strong>: Lofoten & Tromsø 🌌</p>
+    <div class="itinerary-card stay">
+      <div class="date">30 Oct – 1 Nov</div>
+      <h3>🏨 Seljalandsfoss Horizons</h3>
+      <p><strong>Stay:</strong> Standard Apartment (2 nights)</p>
+      <p class="note">Waterfalls & South Coast views 🌊</p>
     </div>
-  </section>
 
-  <!-- GALLERY -->
-  <section id="gallery" class="section light">
-    <div class="wrap">
-      <h2>Trip Highlights</h2>
-      <div class="grid-2 showcase">
-        <div class="showcase-card">
-          <div class="thumb" style="background:url('https://images.unsplash.com/photo-1507525428034-b723cf961d3e?w=800') center/cover no-repeat;"></div>
-          <h4>🏊 Blue Lagoon</h4>
-          <p class="muted">Relax in Iceland’s famous geothermal spa.</p>
-        </div>
-        <div class="showcase-card">
-          <div class="thumb" style="background:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?w=800') center/cover no-repeat;"></div>
-          <h4>🌌 Northern Lights</h4>
-          <p class="muted">Aurora Borealis over Arctic skies.</p>
-        </div>
-        <div class="showcase-card">
-          <div class="thumb" style="background:url('https://images.unsplash.com/photo-1523978591478-c753949ff840?w=800') center/cover no-repeat;"></div>
-          <h4>🏔 Waterfalls & Glaciers</h4>
-          <p class="muted">Seljalandsfoss, Skógafoss & Jökulsárlón.</p>
-        </div>
-        <div class="showcase-card">
-          <div class="thumb" style="background:url('https://images.unsplash.com/photo-1521295121783-8a321d551ad2?w=800') center/cover no-repeat;"></div>
-          <h4>🏡 Lofoten Islands</h4>
-          <p class="muted">Fjords, fishing villages & cozy cabins.</p>
-        </div>
-      </div>
+    <div class="itinerary-card stay">
+      <div class="date">1 Nov – 2 Nov</div>
+      <h3>🏨 Hótel Berg ★★★★★</h3>
+      <p><strong>Location:</strong> Keflavik City Center</p>
+      <p class="note">One night of comfort before Norway</p>
     </div>
-  </section>
 
-  <!-- CONTACT -->
-  <section id="contact" class="section contact">
-    <div class="wrap">
-      <h2>Join the Adventure</h2>
-      <p class="muted">Sneha & Babita, excited about the trip? Let us know 💙</p>
-      <form class="form" onsubmit="alert('This is just a demo form — reply directly to confirm!'); return false;">
-        <label>
-          Name
-          <input type="text" name="name" placeholder="Your name" required>
-        </label>
-        <label>
-          Message
-          <textarea name="message" rows="5" placeholder="I’m in! Can’t wait for our Arctic adventure 🌌" required></textarea>
-        </label>
-        <p><button class="btn" type="submit">Send</button></p>
-      </form>
+    <div class="itinerary-card flight">
+      <div class="date">2 Nov</div>
+      <h3>✈️ Flights to Norway (Lofoten)</h3>
+      <p>Reykjavik → Oslo (SK 4788) · 11:15 → 14:55</p>
+      <p>Oslo → Bodø (DY350) · 17:30 → 19:00</p>
+      <p>Bodø → Leknes (WF896) · 20:25 → 20:55</p>
+      <p class="note">Arrival in the stunning Lofoten Islands 🏔️</p>
     </div>
-  </section>
 
-  <!-- FOOTER -->
-  <footer class="footer">
-    <div class="wrap">
-      <p>© <span id="year"></span> Sneha & Babita — Arctic Adventure 2025</p>
+    <div class="itinerary-card aurora">
+      <div class="date">2–5 Nov</div>
+      <h3>🏡 Lofoten Stay (3 nights)</h3>
+      <p><strong>Ramberg Home (Airbnb)</strong>, hosted by Susanne Grenness</p>
+      <p class="note">🌌 Aurora opportunity — dark skies, fjords & beaches</p>
     </div>
-  </footer>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-</body>
-</html>
+    <div class="itinerary-card flight">
+      <div class="date">5 Nov</div>
+      <h3>✈️ Flight to Tromsø</h3>
+      <p>Leknes (LKN) → Tromsø (TOS)</p>
+      <p><strong>Airline:</strong> Widerøe · Departure 15:30 → Arrival 16:25</p>
+    </div>
+
+    <div class="itinerary-card aurora">
+      <div class="date">5–8 Nov</div>
+      <h3>🏡 Tromsø Stay (3 nights)</h3>
+      <p><strong>Airbnb:</strong> Hjalmar Johansens gate 316 · Host Tobias</p>
+      <p>Check-in: 5 Nov (15:00) | Check-out: 8 Nov (11:00)</p>
+      <p class="note">🌌 Best Aurora nights — Tromsø is the capital of Northern Lights!</p>
+    </div>
+
+    <div class="itinerary-card flight">
+      <div class="date">8 Nov</div>
+      <h3>✈️ Return</h3>
+      <p>Departure from Tromsø — farewell to the Arctic</p>
+    </div>
+
+  </div>
+</section>
