--- a/index.html
+++ b/index.html
@@ -1,74 +1,330 @@
-<!-- ITINERARY -->
-<section id="itinerary" class="section itinerary-section" aria-labelledby="itinerary-heading">
-  <div class="wrap">
-    <h2 id="itinerary-heading">🌍 Our Arctic Adventure — Day by Day</h2>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Sneha & Babita — Arctic Adventure 2025</title>
+  <meta name="description" content="Invitation: Iceland & Norway Family Trip (27 Oct - 8 Nov 2025).">
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header class="header" role="banner">
+    <div class="wrap header-row">
+      <a class="logo" href="#">Aurora<span class="accent">Adventure</span></a>
 
-    <div class="itinerary-card flight">
-      <div class="date">27 Oct</div>
-      <h3>✈️ Flight to Iceland</h3>
-      <p><strong>Delhi (DEL) → Reykjavik (KEF)</strong>, via Munich & Zurich</p>
-      <p><strong>Airline:</strong> Lufthansa (codeshares)</p>
-      <p><strong>Departure:</strong> 01:55 (27 Oct)</p>
-      <p class="note">🌍 Arrival in Reykjavik — the adventure begins!</p>
+      <!-- destination icons -->
+      <nav class="top-icons" aria-label="Destinations">
+        <button class="dest-btn" data-target="iceland" title="Iceland">🇮🇸 Iceland</button>
+        <button class="dest-btn" data-target="lofoten" title="Lofoten">🏡 Lofoten</button>
+        <button class="dest-btn" data-target="tromso" title="Tromsø">🌌 Tromsø</button>
+      </nav>
+
+      <nav class="nav" role="navigation" aria-label="Main">
+        <a href="#about">About</a>
+        <a href="#itinerary">Itinerary</a>
+        <a href="#gallery">Gallery</a>
+        <a href="#contact" class="cta">RSVP</a>
+      </nav>
     </div>
+  </header>
 
-    <div class="itinerary-card stay">
-      <div class="date">27–30 Oct</div>
-      <h3>🏨 Reykjavík Stay (3 nights)</h3>
-      <p><strong>Airbnb:</strong> Hrefnugata 8, Reykjavík 105</p>
-      <p class="note">📍 Near Reykjavik Art Museum Kjarvalsstaðir</p>
+  <!-- HERO -->
+  <section class="hero" aria-labelledby="hero-title"
+           style="background-image:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?w=1600');">
+    <div class="hero-overlay">
+      <div class="wrap hero-inner">
+        <div class="hero-copy">
+          <h1 id="hero-title">🌌 Sneha & Babita — Get Ready for an Arctic Adventure!</h1>
+          <p class="lead">This is our special invitation — together we'll explore Iceland, Lofoten & Tromsø: waterfalls, fjords, cozy cabins, and the magical <strong>Northern Lights</strong>.</p>
+          <div class="actions">
+            <a href="#itinerary" class="btn">See full itinerary</a>
+            <a href="#gallery" class="btn ghost">View highlights</a>
+            <a href="itinerary.pdf" class="btn link" target="_blank" rel="noopener">⬇️ Download itinerary (PDF)</a>
+          </div>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <div class="itinerary-card stay">
-      <div class="date">30 Oct – 1 Nov</div>
-      <h3>🏨 Seljalandsfoss Horizons</h3>
-      <p><strong>Stay:</strong> Standard Apartment (2 nights)</p>
-      <p class="note">Waterfalls & South Coast views 🌊</p>
+  <!-- ABOUT -->
+  <section id="about" class="section light" aria-labelledby="about-heading">
+    <div class="wrap">
+      <h2 id="about-heading">A Family Invitation</h2>
+      <p class="muted">Dear <strong>Sneha & Babita</strong> — this trip is our gift of time together. We’ll chase waterfalls in Iceland, wander glacier lagoons, explore Lofoten’s dramatic islands, and watch the Aurora dance over Tromsø. Everything is arranged — just bring warm clothes and a big smile 💙.</p>
+      <p class="small-muted">Tip: to enable the “Download itinerary (PDF)” button, upload your PDF to the repository as <code>itinerary.pdf</code>.</p>
     </div>
+  </section>
 
-    <div class="itinerary-card stay">
-      <div class="date">1 Nov – 2 Nov</div>
-      <h3>🏨 Hótel Berg ★★★★★</h3>
-      <p><strong>Location:</strong> Keflavik City Center</p>
-      <p class="note">One night of comfort before Norway</p>
+  <!-- ITINERARY -->
+  <section id="itinerary" class="section itinerary-section" aria-labelledby="itinerary-heading">
+    <div class="wrap">
+      <h2 id="itinerary-heading">🌍 Our Arctic Adventure — Day by Day</h2>
+
+      <!-- 27 Oct -->
+      <article class="itinerary-card flight">
+        <div class="date">27 Oct</div>
+        <h3>✈️ Flight to Iceland</h3>
+        <p><strong>Route:</strong> Delhi (DEL) → Reykjavik (KEF), via Munich & Zurich</p>
+        <p><strong>Airline:</strong> Lufthansa (codeshares)</p>
+        <p><strong>PNR:</strong> <code>DAFGLX</code> · <strong>Booking ID:</strong> <code>GOFLISTAGXLV5835743</code></p>
+        <p><strong>Ticket No.:</strong> <code>220-55189665132</code></p>
+        <p><strong>Departure (DEL):</strong> 01:55 (27 Oct)</p>
+        <p class="note">Arrive Reykjavik and check in — our Iceland adventure begins!</p>
+      </article>
+
+      <!-- 27-30 Oct -->
+      <article class="itinerary-card stay">
+        <div class="date">27–30 Oct</div>
+        <h3>🏨 Reykjavík — Airbnb (3 nights)</h3>
+        <p><strong>Stay:</strong> Airbnb — Hrefnugata 8, Reykjavík 105</p>
+        <p><strong>Notes:</strong> Near Reykjavik Art Museum Kjarvalsstaðir</p>
+        <p><strong>Booked via:</strong> Airbnb</p>
+      </article>
+
+      <!-- 30 Oct - 1 Nov -->
+      <article class="itinerary-card stay">
+        <div class="date">30 Oct – 1 Nov</div>
+        <h3>🏨 Seljalandsfoss Horizons (2 nights)</h3>
+        <p><strong>Stay:</strong> Seljalandsfoss Horizons — Standard Apartment</p>
+        <p><strong>Location:</strong> Eystrasaljaland, Rangárþing eystra, 861 Iceland</p>
+        <p><strong>Booked via:</strong> Expedia</p>
+        <p class="note">Base for South Coast waterfalls (Seljalandsfoss, Skógafoss).</p>
+      </article>
+
+      <!-- 1 Nov - 2 Nov -->
+      <article class="itinerary-card stay">
+        <div class="date">1 Nov – 2 Nov</div>
+        <h3>🏨 Hótel Berg (1 night)</h3>
+        <p><strong>Stay:</strong> Hótel Berg ★★★★★</p>
+        <p><strong>Location:</strong> Keflavik City Center, Reykjanesbær, Iceland</p>
+        <p><strong>Booked via:</strong> Goibibo</p>
+      </article>
+
+      <!-- 2 Nov flights -->
+      <article class="itinerary-card flight">
+        <div class="date">2 Nov</div>
+        <h3>✈️ Travel to Norway (Lofoten)</h3>
+        <p><strong>Flight 1:</strong> Reykjavík → Oslo — SAS | SK 4788 | 11:15 → 14:55</p>
+        <p><strong>Flight 2:</strong> Oslo → Bodø — DY350 | 17:30 → 19:00</p>
+        <p><strong>Flight 3:</strong> Bodø → Leknes — WF896 | 20:25 → 20:55</p>
+        <p class="note">Arrive Leknes, transfer to Ramberg.</p>
+      </article>
+
+      <!-- 2-5 Nov Lofoten -->
+      <article class="itinerary-card aurora">
+        <div class="date">2–5 Nov</div>
+        <h3>🏡 Lofoten — Ramberg (3 nights) • 🌌 Northern Lights</h3>
+        <p><strong>Stay:</strong> Home in Ramberg (Airbnb)</p>
+        <p><strong>Host:</strong> Susanne Grenness</p>
+        <p><strong>Booked via:</strong> Airbnb</p>
+        <p class="note">Lofoten offers dramatic coastal scenery and dark skies — great for Aurora watching.</p>
+      </article>
+
+      <!-- 5 Nov flight -->
+      <article class="itinerary-card flight">
+        <div class="date">5 Nov</div>
+        <h3>✈️ Flight to Tromsø</h3>
+        <p><strong>Route:</strong> Leknes (LKN) → Tromsø (TOS)</p>
+        <p><strong>Airline:</strong> Widerøe — Departure 15:30 • Arrival 16:25 (approx. 55 mins)</p>
+      </article>
+
+      <!-- 5-8 Nov Tromsø -->
+      <article class="itinerary-card aurora">
+        <div class="date">5–8 Nov</div>
+        <h3>🏡 Tromsø — Airbnb (3 nights) • 🌌 Best Aurora nights</h3>
+        <p><strong>Stay:</strong> Home in Tromsø</p>
+        <p><strong>Address:</strong> Hjalmar Johansens gate 316, Tromsø</p>
+        <p><strong>Host:</strong> Tobias • <strong>Booked via:</strong> Airbnb</p>
+        <p><strong>Check-in:</strong> 5 Nov (15:00) • <strong>Check-out:</strong> 8 Nov (11:00)</p>
+        <p class="note">Tromsø is a world-class Aurora destination — keep cameras ready!</p>
+      </article>
+
+      <!-- passengers & booking -->
+      <article class="itinerary-card">
+        <div class="date">Notes</div>
+        <h3>Passengers & Booking</h3>
+        <p><strong>Passengers:</strong> Mayank Prakash, Sneha Shah</p>
+        <ul class="small-list">
+          <li><strong>PNR:</strong> DAFGLX</li>
+          <li><strong>Booking ID:</strong> GOFLISTAGXLV5835743</li>
+          <li><strong>Ticket No.:</strong> 220-55189665132</li>
+        </ul>
+        <p class="muted">If you prefer these booking numbers hidden on the public site, I can remove them or place them behind a private link.</p>
+      </article>
+
+      <!-- 8 Nov return -->
+      <article class="itinerary-card flight">
+        <div class="date">8 Nov</div>
+        <h3>✈️ Return</h3>
+        <p>Departure from Tromsø — final return details to be confirmed.</p>
+      </article>
+
+      <p class="muted">✨ Highlight Nights for <strong>Northern Lights</strong>: <span class="badge">Lofoten (2–5 Nov)</span> & <span class="badge">Tromsø (5–8 Nov)</span>.</p>
     </div>
+  </section>
 
-    <div class="itinerary-card flight">
-      <div class="date">2 Nov</div>
-      <h3>✈️ Flights to Norway (Lofoten)</h3>
-      <p>Reykjavik → Oslo (SK 4788) · 11:15 → 14:55</p>
-      <p>Oslo → Bodø (DY350) · 17:30 → 19:00</p>
-      <p>Bodø → Leknes (WF896) · 20:25 → 20:55</p>
-      <p class="note">Arrival in the stunning Lofoten Islands 🏔️</p>
+  <!-- DESTINATION PANELS (Iceland / Lofoten / Tromsø) -->
+  <section id="iceland" class="section dest-section" aria-labelledby="iceland-heading">
+    <div class="wrap">
+      <h2 id="iceland-heading">🇮🇸 Iceland — Famous Places to Explore</h2>
+      <p class="muted">Blue Lagoon, Golden Circle, Seljalandsfoss, Skógafoss, Jökulsárlón and more.</p>
+      <div class="grid-2 showcase dest-grid">
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1519677100203-a0e668c92439?w=1200');"></div>
+          <h4>🏊 Blue Lagoon</h4>
+          <p class="muted">Relax in the geothermic spa — mineral-rich waters.</p>
+        </div>
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1521295121783-8a321d551ad2?w=1200');"></div>
+          <h4>🏞 Seljalandsfoss & Skógafoss</h4>
+          <p class="muted">Iconic waterfalls on the South Coast.</p>
+        </div>
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1523978591478-c753949ff840?w=1200');"></div>
+          <h4>🧊 Jökulsárlón Glacier Lagoon</h4>
+          <p class="muted">Floating icebergs and black sand beaches nearby.</p>
+        </div>
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1557800636-894a64c1696f?w=1200');"></div>
+          <h4>🗺 Golden Circle</h4>
+          <p class="muted">Thingvellir, Geysir, and Gullfoss — classic Iceland loop.</p>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <div class="itinerary-card aurora">
-      <div class="date">2–5 Nov</div>
-      <h3>🏡 Lofoten Stay (3 nights)</h3>
-      <p><strong>Ramberg Home (Airbnb)</strong>, hosted by Susanne Grenness</p>
-      <p class="note">🌌 Aurora opportunity — dark skies, fjords & beaches</p>
+  <section id="lofoten" class="section dest-section light" aria-labelledby="lofoten-heading">
+    <div class="wrap">
+      <h2 id="lofoten-heading">🏡 Lofoten — What to see</h2>
+      <p class="muted">Ramberg beach, fishing villages, dramatic fjords and great Aurora viewing.</p>
+      <div class="grid-2 showcase dest-grid">
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?w=1200');"></div>
+          <h4>🌌 Ramberg / Beaches</h4>
+          <p class="muted">Rugged coastline and wide beaches — great for photos.</p>
+        </div>
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1473186505569-9c61870c11f9?w=1200');"></div>
+          <h4>🏘 Fishing Villages</h4>
+          <p class="muted">Colorful rorbuer (fishermen cabins) & local life.</p>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <div class="itinerary-card flight">
-      <div class="date">5 Nov</div>
-      <h3>✈️ Flight to Tromsø</h3>
-      <p>Leknes (LKN) → Tromsø (TOS)</p>
-      <p><strong>Airline:</strong> Widerøe · Departure 15:30 → Arrival 16:25</p>
+  <section id="tromso" class="section dest-section" aria-labelledby="tromso-heading">
+    <div class="wrap">
+      <h2 id="tromso-heading">🌌 Tromsø — Highlights</h2>
+      <p class="muted">Arctic Cathedral, Tromsø bridge, fjord cruises, and excellent Northern Lights tours.</p>
+      <div class="grid-2 showcase dest-grid">
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1519125323398-675f0ddb6308?w=1200');"></div>
+          <h4>🌉 Tromsø Bridge & City</h4>
+          <p class="muted">Explore the city, cafés, and museums.</p>
+        </div>
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1549880338-65ddcdfd017b?w=1200');"></div>
+          <h4>🚤 Fjord Views</h4>
+          <p class="muted">Short cruises and scenic viewpoints near Tromsø.</p>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <div class="itinerary-card aurora">
-      <div class="date">5–8 Nov</div>
-      <h3>🏡 Tromsø Stay (3 nights)</h3>
-      <p><strong>Airbnb:</strong> Hjalmar Johansens gate 316 · Host Tobias</p>
-      <p>Check-in: 5 Nov (15:00) | Check-out: 8 Nov (11:00)</p>
-      <p class="note">🌌 Best Aurora nights — Tromsø is the capital of Northern Lights!</p>
+  <!-- GALLERY -->
+  <section id="gallery" class="section light" aria-labelledby="gallery-heading">
+    <div class="wrap">
+      <h2 id="gallery-heading">Trip Highlights — Photos</h2>
+      <div class="grid-2 showcase">
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1519677100203-a0e668c92439?w=1200');"></div>
+          <h4>🏊 Blue Lagoon</h4>
+          <p class="muted">Geothermal spa near Reykjavik.</p>
+        </div>
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1501785888041-af3ef285b470?w=1200');"></div>
+          <h4>🌌 Northern Lights</h4>
+          <p class="muted">Aurora Borealis photography inspiration.</p>
+        </div>
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1523978591478-c753949ff840?w=1200');"></div>
+          <h4>🏔 Waterfalls & Glaciers</h4>
+          <p class="muted">Seljalandsfoss, Skógafoss, and glacier lagoons.</p>
+        </div>
+        <div class="showcase-card">
+          <div class="thumb" style="background-image:url('https://images.unsplash.com/photo-1521295121783-8a321d551ad2?w=1200');"></div>
+          <h4>🏡 Lofoten Islands</h4>
+          <p class="muted">Coastal landscape & cosy cabins.</p>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <div class="itinerary-card flight">
-      <div class="date">8 Nov</div>
-      <h3>✈️ Return</h3>
-      <p>Departure from Tromsø — farewell to the Arctic</p>
+  <!-- CONTACT / RSVP -->
+  <section id="contact" class="section" aria-labelledby="contact-heading">
+    <div class="wrap">
+      <h2 id="contact-heading">RSVP & Messages</h2>
+      <p class="muted">Sneha & Babita — excited to join? Send a quick RSVP or message below. You can also WhatsApp Mayank if you prefer.</p>
+
+      <form class="form" onsubmit="alert('Thanks — message captured in demo. Please call/WhatsApp Mayank to confirm.'); return false;">
+        <label>
+          Your name
+          <input type="text" name="name" placeholder="Sneha / Babita / Other" required>
+        </label>
+
+        <label>
+          Message / RSVP
+          <textarea name="message" rows="4" placeholder="I'm in! / Need more details..." required></textarea>
+        </label>
+
+        <div class="rsvp-row">
+          <label class="inline">
+            <input type="radio" name="attend" value="yes" checked> I will join
+          </label>
+          <label class="inline">
+            <input type="radio" name="attend" value="maybe"> Maybe
+          </label>
+          <label class="inline">
+            <input type="radio" name="attend" value="no"> Can't join
+          </label>
+        </div>
+
+        <p><button class="btn" type="submit">Send RSVP</button></p>
+      </form>
     </div>
+  </section>
 
-  </div>
-</section>
+  <!-- FOOTER -->
+  <footer class="footer" role="contentinfo">
+    <div class="wrap">
+      <p>© <span id="year"></span> Sneha & Babita — Arctic Adventure 2025</p>
+      <p class="small-muted">Prepared by Mayank. If you want any sensitive booking numbers removed, tell me and I’ll hide them.</p>
+    </div>
+  </footer>
+
+  <script>
+    // year
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // smooth scroll for in-page links
+    document.querySelectorAll('a[href^="#"], .dest-btn').forEach(function(item){
+      item.addEventListener('click', function(e){
+        var targetId = this.getAttribute('href') ? this.getAttribute('href').slice(1) : this.dataset.target;
+        if(!targetId) return;
+        var el = document.getElementById(targetId);
+        if(el){ el.scrollIntoView({behavior:'smooth', block:'start'}); }
+      });
+    });
+
+    // dest-btn highlight effect (add class to body for tiny theme variations if needed)
+    document.querySelectorAll('.dest-btn').forEach(function(btn){
+      btn.addEventListener('click', function(){
+        // simple highlight animation
+        document.querySelectorAll('.dest-btn').forEach(b=>b.classList.remove('active'));
+        this.classList.add('active');
+        // scroll to target handled by previous listener
+      });
+    });
+  </script>
+</body>
+</html>
